--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
             <h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
             <ul>
                 {% for conference in conferences %}
-                    <li><a href="{{ path('conference', { id: conference.getId }) }}">{{ conference }}</a></li>
+                    <li><a href="{{ path('conference', { slug: conference.getSlug }) }}">{{ conference }}</a></li>
                 {% endfor %}
             </ul>
         </header>
