--- a/templates/conference/index.html.twig
+++ b/templates/conference/index.html.twig
@@ -8,7 +8,7 @@
     {% for conference in conferences %}
         {{ conference }}
         <p>
-            <a href="{{ path('conference', { id: conference.getId }) }}">View</a>
+            <a href="{{ path('conference', { slug: conference.getSlug }) }}">View</a>
         </p>
     {% endfor %}
 {% endblock %}
