--- a/templates/conference/show.html.twig
+++ b/templates/conference/show.html.twig
@@ -20,11 +20,11 @@
         {% endfor %}
 
         {% if previous >= 0 %}
-            <a href="{{ path('conference', { id: conference.getId, offset: previous }) }}">Previous</a>
+            <a href="{{ path('conference', { slug: conference.getSlug, offset: previous }) }}">Previous</a>
         {% endif %}
 
         {% if next < comments | length %}
-            <a href="{{ path('conference', { id: conference.getId, offset: next }) }}">Next</a>
+            <a href="{{ path('conference', { slug: conference.getSlug, offset: next }) }}">Next</a>
         {% endif %}
     {% else %}
         <div>No comments have been posted yet for this conference.</div>
