--- a/templates/emails/comment_notification.html.twig
+++ b/templates/emails/comment_notification.html.twig
@@ -1,11 +1,11 @@
 {% extends '@email/default/notification/body.html.twig' %}
 
 {% block content %}
-Author: {{ comment.getAuthor }}<br />
-Email: {{ comment.getEmail }}<br />
-State: {{ comment.getState }}<br />
+Author: {{ comment.author }}<br />
+Email: {{ comment.email }}<br />
+State: {{ comment.state }}<br />
 
-<p>comment.getText</p>
+<p>{{ comment.text }}</p>
 {% endblock %}
 
 {% block action %}
